<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_advertisement"
            android:icon="@drawable/ic_advertisements"
            android:title="@string/menu_advertisement" />
        <item
            android:id="@+id/nav_all_advertisements"
            android:icon="@drawable/ic_advertisements"
            android:title="@string/menu_all_advertisement" />
        <item
            android:id="@+id/nav_single_message"
            android:icon="@drawable/ic_advertisements"
            android:title="Single message test" />
    </group>
</menu>