<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/fatherLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/upperLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/upperConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient">

                    <ImageButton
                        android:id="@+id/profileImageButton"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/imageDescription"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/profile_image"
                        tools:ignore="ImageContrastCheck"
                        tools:srcCompat="@drawable/profile_image" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/lowerLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fullNameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullNameLabel"
                    android:textColorHint="#5B5E71"
                    app:boxBackgroundColor="#FFFFFF"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/fullNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_user_icon"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:text="@string/fullName"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:hint="@string/fullNameLabel"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nicknameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nicknameLabel"
                    android:textColorHint="#5B5E71"
                    app:boxBackgroundColor="#FFFFFF"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/nicknameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_user_icon"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:text="@string/nickname"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:hint="@string/nicknameLabel"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailLabel"
                    android:textColorHint="#5B5E71"
                    app:boxBackgroundColor="#FFFFFF"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_icon"
                        android:drawablePadding="10dp"
                        android:inputType="textEmailAddress"
                        android:text="@string/email"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:hint="@string/locationLabel"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/locationTextInputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/locationLabel"
                    android:textColorHint="#5B5E71"
                    app:boxBackgroundColor="#FFFFFF"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/locationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_location_icon"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:text="@string/location"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:hint="@string/locationLabel"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/skill1TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skillsLabel"
                    android:textColorHint="#5B5E71"
                    app:boxBackgroundColor="#FFFFFF"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/skillEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_skills_icon"
                        android:drawablePadding="10dp"
                        android:orientation="vertical"
                        android:text="@string/skill1"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:inputType="text"
                        android:hint="@string/skillsLabel"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descriptionTextInputLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descriptionLabel"
                    android:textColorHint="#5B5E71"
                    app:boxBackgroundColor="#FFFFFF"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <EditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_description_icon"
                        android:drawablePadding="10dp"
                        android:inputType="textMultiLine"
                        android:text="@string/description"
                        android:textSize="20sp"
                        android:autofillHints=""
                        android:hint="@string/descriptionLabel"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>